<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:title="@string/favorites"
            android:icon="@drawable/ic_favorites"
            android:id="@+id/favoritesFragment"
            />

        <item
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"
            android:id="@+id/settingsFragment"
            />

        <item
            android:title="@string/about"
            android:icon="@drawable/ic_info"
            android:id="@+id/aboutFragment"
            />

        <item
            android:title="@string/sign_out"
            android:icon="@drawable/ic_sign_out"
            android:id="@+id/signOutFragment"
            />
    </group>
</menu>